fix: resolve code review issues across source, config, and docs
Code fixes:
- Add missing exception handlers (type mismatch 400, malformed body 400,
  data integrity 409) to GlobalExceptionHandler
- Mask sensitive fields (password/token) in validation error responses
- Add username uniqueness check in UserServiceImpl
- Add updatedAt field to UserResponse and UserMapper
- Rename RestTemplate bean to eliminate injection ambiguity
- Add @Sql seed data to ContractBaseTest for contract test data

Contract test fixes:
- Align error codes with actual ErrorCode enum (001001, 002001)
- Remove null field assertions incompatible with @JsonInclude(NON_NULL)
- Use unique username in create contract to avoid seed data conflict

AI config fixes:
- Fix ApiResponse.error() signature in validation.md examples
- Resolve RestTemplate vs RestClient rule contradiction
- Fix Flyway version (managed by BOM, not pinned 10.x)
- Fix hooks cd path in settings.json
- Narrow api-conventions.md path scope (remove **/*.md)
- Fix apitest-guide.md section numbering
- Remove phantom orders/ from contract-test.md
- Remove phantom mysql/ from db-migration.md
- Update CLAUDE.md agent list to include all 4 agents

Doc fixes:
- Align DELETE status code to 200 across code, docs, and rules
- Update API spec error codes to numeric format
- Fix ADR dates from 2024 to 2026
- Update domain-model.md value objects description
- Update requirements status to completed
- Create missing Dockerfile for docker-compose
- Remove deprecated docker-compose version field
- Fix generate-openapi.sh to use runtime endpoint
- Sync WireMock stub to use bodyFileName instead of inline body

All changes synced to both claude/ and copilot/ directories.
All 16 tests pass in both projects.